# desktop_ambient

./: CMakeLists.txt  LICENSE  README.md
scripts/: install_service.sh  uninstall_service.sh
src/: audio_controller.cpp  audio_controller.h  audio_player.cpp  audio_player.h  main.cpp  ogg_decoder.cpp  ogg_decoder.h
